# founder-os

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  TEST_AUTH.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/src/app/: config.py  database.py  encryption.py  main.py  scheduler.py
backend/src/app/api/: __init__.py  captable.py  companies.py  conversations.py  deps.py  events.py  finance.py  founders.py  intelligence.py  legal.py  market.py  settings.py  suggestions.py  vsop.py
backend/src/app/intelligence/: ask.py  openai_client.py  orchestrator.py  prompts.py  research.py  schemas.py
backend/src/app/models/: __init__.py  allocation.py  app_setting.py  associations.py  bank_transaction.py  company.py  company_digest.py  company_legal.py  competitor_client.py  conversation.py  data_source.py  enrichment_snapshot.py  equity_event.py  event.py  expense_category_rule.py  founder.py  funding_round.py  investor.py  legal_document.py  market_category.py  planned_expense.py  product.py  share_class.py  social_post.py  stakeholder.py  treasury_account.py  vsop_grant.py  vsop_pool.py
backend/src/app/schemas/: __init__.py  captable.py  common.py  company.py  competitor_client.py  data_source.py  digest.py  event.py  finance.py  founder.py  funding.py  intelligence.py  legal.py  market.py  product.py  social_post.py  vsop.py
backend/src/app/services/: __init__.py  captable_service.py  company_service.py  event_service.py  finance_service.py  founder_service.py  (+5 more)
(+111 files in other folders)
