[project]
name = "founderos-backend"
version = "1.0.0"
description = "founderOS - Founder & Company Intelligence Platform API"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "greenlet>=3.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.58.0",
    "httpx>=0.28.0",
    "ddgs>=7.0.0",
    "trafilatura>=2.0.0",
    "markdownify>=0.14.0",
    "cryptography>=44.0.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
